# Property-Management-System

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/auth/: controller.py  models.py  router.py
src/files/: controller.py  router.py
src/tickets/: controller.py  models.py  router.py
src/users/: controller.py  models.py  router.py
src/utils/: constants.py  db.py  email_sender.py
