[project]
name = "property-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.6",
    "firebase-admin>=7.1.0",
    "numpy==2.3.0",
    "psycopg2-binary==2.9.6",
    "pwdlib[argon2]==0.3.0",
    "pydantic==2.10.4",
    "pyjwt>=2.11.0",
    "python-dotenv==1.2.1",
    "python-multipart>=0.0.22",
    "sqlalchemy==2.0.19",
    "uvicorn==0.34.0",
]
